<resources>
    //App Name
    <string name="app_name">Screen Mirroring</string>

    //Back Button
    <string name="back">Back</string>

    //Cast Button
    <string name="cast">cast</string>

    //Main Activity
    <string name="the_action_can_contain_ads">The action can contain ads</string>


    //Dashboard Activity
    <string name="title_screen_mirroring">Screen Mirroring</string>
    <string name="connect_your_device">Connect your device</string>
    <string name="drawer">Drawer</string>
    <string name="mirroring">Mirroring</string>
    <string name="screen_mirroring">Screen Mirroring</string>
    <string name="tap_to_connect">Tap to connect</string>
    <string name="mirror_phone_screen_to_tv">Mirror phone screen to TV</string>
    <string name="tv_screen_mirroring">TV Screen Mirroring</string>
    <string name="videos">VIDEOS</string>
    <string name="images">IMAGES</string>
    <string name="audios">AUDIOS</string>

    //Connect Activity
    <string name="click_on_device_to_connect">Click on device to connect</string>
    <string name="connect_text_1">Make sure your phone and TV device is connected on same WIFI and turn off VPN.</string>
    <string name="connect_text_2">Enable the wireless display function on your phone and wait for the device searching. Click on device to connect.</string>
    <string name="connect_text_3">Connection successful. Now you can control the TV via smartphone.</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="start_btn">Start</string>
    <string name="title_connect">Connect</string>

    //Setting Drawer Strings
    <string name="title_setting">Settings</string>
    <string name="change_language">Change Language</string>
    <string name="how_to_use">How To Use?</string>
    <string name="rate_us">Rate Us</string>
    <string name="feedback">Feedback</string>
    <string name="more_apps">More Apps</string>
    <string name="share_app">Share App</string>
    <string name="privacy_policy">Privacy Policy</string>

    //Feedback Activity
    <string name="write_feedback">Write Feedback</string>
    <string name="write_your_feedback">Write your feedback</string>
    <string name="upload_screenshot">Upload Screenshot</string>
    <string name="submit_button">SUBMIT</string>
    <string name="plus">+</string>


    //Videos Activity
    <string name="title_videos">Videos</string>

    //Images Activity
    <string name="title_images">Images</string>

    //Audios Activity
    <string name="title_audios">Audios</string>
    <string name="all_audios_btn">All Audios</string>

    //Languages Activity
    <string name="title_change_language">Change Language</string>
    <string name="english">English</string>

    //Search Devices Activity
    <string name="caution_search_devices">Please make sure your phone and your TV are connected to internet</string>
    <string name="title_search_devices">Search Devices</string>
    <string name="samsung">Samsung</string>
    <string name="vizio">Vizio</string>
    <string name="lg_web_os">LG web OS</string>
    <string name="ruko">Ruko</string>
    <string name="tcl">TCL</string>
    <string name="fire_tv">Fire TV</string>
    <string name="wifi">WIFI</string>

    //How to use Activity
    <string name="_1_make_sure_your_phone_and_tv_are_connected_to_the_same_wifi_network">1. Make sure your phone and TV are connected to the same WIFI network</string>
    <string name="_2_click_to_select_screen_mirroring_feature">2. Click to select Screen Mirroring feature.</string>
    <string name="_3_here_you_can_select_how_to_you_to_see_details_of_how_to_connect">3. Here you can select How to you to see details of how to connect.</string>
    <string name="_4_click_the_start_button_to_start_using_the_feature">4. Click the START button to start using the feature.</string>
    <string name="_5_connection_successful_now_your_phone_screen_is_displayed_on_the_tv">5. Connection successful. Now your phone screen is displayed on the TV</string>

    //OnBoarding Activity
    <string name="skip">Skip</string>
    <string name="next">Next</string>
    <string name="connect_and_share_instantly">Connect and Share Instantly</string>
    <string name="transform_your_screens_with_a_tap">Transform Your Screens with a Tap</string>
    <string name="connect_mirror_and_share_effortlessly">Connect, Mirror, and Share Effortlessly</string>

    //spinner strings
    <string name="open">Open</string>
    <string name="close">Close</string>

    //audio items
    <string name="audio_title">audio title</string>

    //Languages
    <string name="chinese">日本語</string>
    <string name="japanese">日本語</string>
    <string name="russain">Русский</string>
    <string name="arabic">لعربية</string>
    <string name="urdu">اُردو</string>
    <string name="spanish">Español</string>
    <string name="hindi">ہندی</string>

</resources>