<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".onBoarding">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black">

        <ImageView
            android:id="@+id/onBoardingImg"
            android:layout_width="309dp"
            android:layout_height="281dp"
            android:layout_marginTop="@dimen/_100sdp"
            android:src="@drawable/science"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textContent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_20sdp"
            android:gravity="center"
            android:text="@string/connect_and_share_instantly"
            android:textColor="@color/white"
            android:textSize="@dimen/_14sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/onBoardingImg" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_50sdp"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textContent">

            <androidx.cardview.widget.CardView
                android:id="@+id/card1"
                android:layout_width="@dimen/_5sdp"
                android:layout_height="@dimen/_5sdp"
                android:background="@color/white"
                app:cardCornerRadius="@dimen/_5sdp"
                tools:ignore="RtlHardcoded" />

            <androidx.cardview.widget.CardView
                android:id="@+id/card2"
                android:layout_width="@dimen/_5sdp"
                android:layout_height="@dimen/_5sdp"
                android:layout_marginLeft="@dimen/_6sdp"
                android:layout_marginRight="@dimen/_6sdp"
                android:background="@color/white"
                app:cardCornerRadius="@dimen/_5sdp"
                tools:ignore="RtlHardcoded" />

            <androidx.cardview.widget.CardView
                android:id="@+id/card3"
                android:layout_width="@dimen/_5sdp"
                android:layout_height="@dimen/_5sdp"
                android:layout_marginRight="@dimen/_6sdp"
                android:background="@color/white"
                app:cardCornerRadius="@dimen/_5sdp"
                tools:ignore="RtlHardcoded" />

            <androidx.cardview.widget.CardView
                android:id="@+id/mainCard"
                android:layout_width="@dimen/_15sdp"
                android:layout_height="@dimen/_5sdp"
                android:background="@color/white"
                app:cardCornerRadius="@dimen/_5sdp" />

            <androidx.cardview.widget.CardView
                android:id="@+id/card4"
                android:layout_width="@dimen/_5sdp"
                android:layout_height="@dimen/_5sdp"
                android:layout_marginLeft="@dimen/_6sdp"
                android:background="@color/white"
                app:cardCornerRadius="@dimen/_5sdp"
                tools:ignore="RtlHardcoded" />

            <androidx.cardview.widget.CardView
                android:id="@+id/card5"
                android:layout_width="@dimen/_5sdp"
                android:layout_height="@dimen/_5sdp"
                android:layout_marginLeft="@dimen/_6sdp"
                android:background="@color/white"
                app:cardCornerRadius="@dimen/_5sdp"
                tools:ignore="RtlHardcoded" />

            <androidx.cardview.widget.CardView
                android:id="@+id/card6"
                android:layout_width="@dimen/_5sdp"
                android:layout_height="@dimen/_5sdp"
                android:layout_marginLeft="@dimen/_6sdp"
                android:background="@color/white"
                app:cardCornerRadius="@dimen/_5sdp"
                tools:ignore="RtlHardcoded" />

        </LinearLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/nextBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/custom_button"
            android:text="@string/next"
            android:textColor="@color/white"
            android:layout_marginEnd="@dimen/_40sdp"
            android:layout_marginStart="@dimen/_40sdp"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

        <TextView
            android:id="@+id/skipText"
            android:layout_width="@dimen/_30sdp"
            android:layout_height="@dimen/_30sdp"
            android:layout_margin="@dimen/_20sdp"
            android:gravity="center"
            android:text="@string/skip"
            android:textColor="@color/white"
            android:textSize="15sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
/>
    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>